# wishlists_backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  events.py  friends.py  users.py  wishlist.py
app/constants/: auth.py  wishlist.py
app/core/: config.py  security.py
app/db/: session.py
app/dependencies/: auth.py
app/models/: __init__.py  event.py  friendship.py  notification.py  tag.py  user.py  wish_item.py  wish_item_tag.py  wishlist.py
app/schemas/: auth.py  event.py  tag.py  wish_item.py
app/services/: auth.py  wish.py
migrations/versions/: 3c1cc2ecb181_init.py  83a7fc215b4d_init_models.py  a4dc1d7d1fbc_init.py
