[tool.poetry]
name = "adelya-wishlists"
version = "0.1.0"
description = ""
authors = ["Alchemist of the web <nikitakzntcv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.13.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.22"
email-validator = "^2.3.0"
argon2-cffi = "^25.1.0"
sqlalchemy-utils = "^0.42.1"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
